<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewFirst"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextFirst"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonFirst"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewResult"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>