<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSecond"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextSecond"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSecond"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewResult1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewResult1"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>