<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewThird"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewResult3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewResult3"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextThird"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>